MotionInclude/Public/ADVMOT.bas


'Add by yanli.zhu 2015.01.26 for ethcat
Global Const DAQ_AI_NEG_10V_TO_10V = &H1
Global Const DAQ_AI_NEG_5V_TO_5V = &H2
Global Const DAQ_AI_NEG_2500MV_TO_2500MV = &H4
Global Const DAQ_AI_NEG_1250MV_TO_1250MV = &H8
Global Const DAQ_AI_NEG_625MV_TO_625MV = &H10
Global Const DAQ_AI_NEG_1V_TO_1V = &H20
Global Const DAQ_AI_NEG_500MV_TO_500MV = &H40
Global Const DAQ_AI_NEG_150MV_TO_150MV = &H80
Global Const DAQ_AI_0MA_TO_20MA = &H10000
Global Const DAQ_AI_4MA_TO_20MA = &H20000
Global Const DAQ_AI_NEG_20MA_TO_20MA = &H40000

'Add by yanli.zhu 2015.01.26 for ethcat
Global Const CFG_DAQ_AI_NEG_10V_TO_10V = &H0
Global Const CFG_DAQ_AI_NEG_5V_TO_5V = &H1
Global Const CFG_DAQ_AI_NEG_2500MV_TO_2500MV = &H2
Global Const CFG_DAQ_AI_NEG_1250MV_TO_1250MV = &H3
Global Const CFG_DAQ_AI_NEG_625MV_TO_625MV = &H4
Global Const CFG_DAQ_AI_NEG_1V_TO_1V = &H5
Global Const CFG_DAQ_AI_NEG_500MV_TO_500MV = &H6
Global Const CFG_DAQ_AI_NEG_150MV_TO_150MV = &H7
Global Const CFG_DAQ_AI_NEG_0_TO_10V = &H8
Global Const CFG_DAQ_AI_NEG_0_TO_500mV = &H9
Global Const CFG_DAQ_AI_0MA_TO_20MA = &H10
Global Const CFG_DAQ_AI_4MA_TO_20MA = &H11
Global Const CFG_DAQ_AI_NEG_20MA_TO_20MA = &H12

Global Const CFG_DAQ_AO_NEG_10V_TO_10V = &H0
Global Const CFG_DAQ_AO_NEG_5V_TO_5V = &H1
Global Const CFG_DAQ_AO_NEG_2500MV_TO_2500MV = &H2
Global Const CFG_DAQ_AO_NEG_1250MV_TO_1250MV = &H3
Global Const CFG_DAQ_AO_NEG_625MV_TO_625MV = &H4
Global Const CFG_DAQ_AO_NEG_0V_TO_10 = &H5
Global Const CFG_DAQ_AO_0MA_TO_20MA = &H10
Global Const CFG_DAQ_AO_4MA_TO_20MA = &H11

Global Const DAQ_AO_NEG_10V_TO_10V = &H1
Global Const DAQ_AO_NEG_5V_TO_5V = &H2
Global Const DAQ_AO_NEG_2500MV_TO_2500MV = &H4
Global Const DAQ_AO_NEG_1250MV_TO_1250MV = &H8
Global Const DAQ_AO_NEG_625MV_TO_625MV = &H10
Global Const DAQ_AO_NEG_0V_TO_10 = &H20
Global Const DAQ_AO_0MA_TO_20MA = &H10000
Global Const DAQ_AO_4MA_TO_20MA = &H20000
'[Dan.yang 2011.06.08]
Declare Function Acm_GetAvailableDevs Lib "ADVMOT.dll" (ByRef DeviceList As DEVLIST, _
    ByVal MaxEntries As Long, ByRef OutEntries As Long) As Long
''''''''''''''''[Dan.yang 2011.06.21 Modified the parameters of functions]''''''''''''''''''''''''''''''''''''''
Declare Function Acm_GetAddress Lib "ADVMOT.dll" (lpVoid As Any) As Long
Declare Function Acm_DevOpen Lib "ADVMOT.dll" (ByVal DeviceNumber As Long, ByRef DeviceHandle As Long) As Long
Declare Function Acm_DevClose Lib "ADVMOT.dll" (ByRef DeviceHandle As Long) As Long
Declare Function Acm_DevReadEEPROM Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal EEPROMAddr As Integer, ByRef readValue As Integer) As Long
Declare Function Acm_DevWriteEEPROM Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal EEPROMAddr As Integer, ByVal WriteValue As Integer) As Long
Declare Function Acm_GetProperty Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal PropertyID As Long, ByRef Buffer As Any, ByRef BufferLength As Long) As Long
Declare Function Acm_GetU32Property Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal PropertyID As Long, ByRef Buffer As Long) As Long
Declare Function Acm_GetF64Property Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal PropertyID As Long, ByRef Buffer As Double) As Long
Declare Function Acm_SetProperty Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal PropertyID As Long, ByRef Buffer As Any, ByVal BufferLength As Long) As Long
Declare Function Acm_SetU32Property Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal PropertyID As Long, ByVal Buffer As Long) As Long
Declare Function Acm_SetF64Property Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal PropertyID As Long, ByVal Buffer As Double) As Long
Declare Function Acm_EnableMotionEvent Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, _
                                    ByRef AxEnableEvtArray As Long, ByRef GpEnableEvtArray As Long, _
                                    ByVal AxArrayElements As Long, ByVal GpArrayElements As Long) As Long
Declare Function Acm_CheckMotionEvent Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, _
                                    ByRef AxEnableEvtArray As Long, ByRef GpEnableEvtArray As Long, _
                                    ByVal AxArrayElements As Long, ByVal GpArrayElements As Long, ByVal Millisecond As Long) As Long

Declare Function Acm_CancelCheckEvent Lib "ADVMOT.dll" (ByVal DeviceHandle As Long) As Long
Declare Function Acm_DevLoadConfig Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal ConfigPath As String) As Long
Declare Function Acm_DevFwDownload Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal Data As Long, ByVal DataID As Long) As Long

Declare Function Acm_GetErrorMessage Lib "ADVMOT.dll" (ByVal ErrorCode As Long, ByVal lpszError As String, ByVal nMaxError As Long) As Boolean
                         
'Master device operation
Declare Function Acm_MasStartRing Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal ringNo As Integer) As Long
Declare Function Acm_MasStopRing Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal ringNo As Integer) As Long
Declare Function Acm_MasGetComStatus Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal ringNo As Integer, ByRef pStatus As Integer) As Long
Declare Function Acm_MasGetComCyclicTime Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal ringNo As Integer, ByRef pTime As Double) As Long
Declare Function Acm_MasGetDataCyclicTime Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal ringNo As Integer, ByRef DataCyclicTime As Double) As Long
Declare Function Acm_MasGetActiveTable Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal ringNo As Integer, _
                    ByRef ActiveTableArray As Long, ByRef ArrayElements As Long) As Long
Declare Function Acm_MasGetErrorTable Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal ringNo As Integer, ByRef ErrorTableArray As Long, ByRef ArrayElements As Long) As Long
Declare Function Acm_MasGetSlaveInfo Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal ringNo As Integer, ByVal slaveIP As Integer, ByRef pInfo As Long) As Long
Declare Function Acm_MasLogComStatus Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal ringNo As Integer) As Long
Declare Function Acm_MasTrigOut Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal ringNo As Integer) As Long
Declare Function Acm_MasGetRingStatus Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal ringNo As Integer, ByRef pStatus As Integer) As Long
'Axis operation
Declare Function Acm_AxOpen Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal PhyAxis As Integer, ByRef AxisHandle As Long) As Long
Declare Function Acm_AxClose Lib "ADVMOT.dll" (ByRef AxisHandle As Long) As Long
Declare Function Acm_AxSetErcOn Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal OnOff As Long) As Long
Declare Function Acm_AxResetAlm Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByVal OnOff As Long) As Long
Declare Function Acm_AxMoveRel Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByVal Distance As Double) As Long
Declare Function Acm_AxMoveAbs Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByVal Position As Double) As Long
Declare Function Acm_AxMoveVel Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByVal Direction As Integer) As Long
Declare Function Acm_AxStopDec Lib "ADVMOT.dll" (ByVal AxisHandle As Long) As Long
Declare Function Acm_AxStopEmg Lib "ADVMOT.dll" (ByVal AxisHandle As Long) As Long
Declare Function Acm_AxHomeEx Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByVal DirMode As Long) As Long
Declare Function Acm_AxHome Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByVal HomeMode As Long, ByVal DirMode As Long) As Long
Declare Function Acm_AxSetSvOn Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal OnOff As Long) As Long

'// U32 Acm_AxPauseMotion(U32 AxisHandle);
'// U32 Acm_AxResumeMotion(U32 AxisHandle);
Declare Function Acm_AxChangeVel Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByVal NewVel As Double) As Long
Declare Function Acm_AxChangePos Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByVal NewPos As Double) As Long
Declare Function Acm_AxResetError Lib "ADVMOT.dll" (ByVal AxisHandle As Long) As Long
Declare Function Acm_AxGetState Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByRef State As Integer) As Long
Declare Function Acm_AxGetMotionIO Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByRef Status As Long) As Long
Declare Function Acm_AxGetMotionStatus Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByRef Status As Long) As Long
Declare Function Acm_GetLastError Lib "ADVMOT.dll" (ByVal Handle As Long) As Long
Declare Function Acm_AxGetCmdPosition Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByRef Position As Double) As Long
Declare Function Acm_AxSetCmdPosition Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByVal Position As Double) As Long
Declare Function Acm_AxGetActualPosition Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByRef Position As Double) As Long
Declare Function Acm_AxSetActualPosition Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByVal Position As Double) As Long
Declare Function Acm_AxGetCmdVelocity Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByRef Velocity As Double) As Long
Declare Function Acm_AxGetLagCounter Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByRef Position As Double) As Long
Declare Function Acm_AxGetLatchData Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByRef Position As Double) As Long
Declare Function Acm_AxStartSoftLatch Lib "ADVMOT.dll" (ByVal AxisHandle As Long) As Long
Declare Function Acm_AxSetExtDrive Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByVal ExtDrvMode As Integer) As Long
Declare Function Acm_AxDoSetBit Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByVal DoChannel As Integer, ByVal BitData As Byte) As Long
Declare Function Acm_AxDoGetBit Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByVal DoChannel As Integer, ByRef BitData As Byte) As Long
Declare Function Acm_AxDiGetBit Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByVal DiChannel As Integer, ByRef BitData As Byte) As Long
Declare Function Acm_AxSimStartSuspendVel Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByVal DriDir As Integer) As Long
Declare Function Acm_AxSimStartSuspendRel Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByVal Distance As Double) As Long
Declare Function Acm_AxSimStartSuspendAbs Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByVal endPoint As Double) As Long
Declare Function Acm_AxSimStart Lib "ADVMOT.dll" (ByVal AxisHandle As Long) As Long
Declare Function Acm_AxSimStop Lib "AVMOT.dll" (ByVal AxisHandle As Long) As Long

'Group operation
Declare Function Acm_GpAddAxis Lib "ADVMOT.dll" (ByRef GpHandle As Long, ByVal AxHandle As Long) As Long
Declare Function Acm_GpRemAxis Lib "ADVMOT.dll" (ByVal GroupHandle As Long, ByVal AxisHandle As Long) As Long
Declare Function Acm_GpClose Lib "ADVMOT.dll" (ByRef GroupHandle As Long) As Long
Declare Function Acm_GpGetState Lib "ADVMOT.dll" (ByVal GroupHandle As Long, ByRef State As Integer) As Long
Declare Function Acm_GpResetError Lib "ADVMOT.dll" (ByVal GroupHandle As Long) As Long
